[package]
name = "sxd-xpath-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sxd-document = "*"

[dependencies.sxd-xpath]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "evaluate"
path = "fuzz_targets/evaluate.rs"
test = false
doc = false

[profile.release]
debug = true
